Fixed  button icon alignment

--- a/src/3-general/_button.scss
+++ b/src/3-general/_button.scss
@@ -199,8 +199,8 @@ a.button { // sass-lint:disable-line no-qualifying-elements
   }
 
   .ri {
-    vertical-align: middle;
-    line-height: em(40);
+    line-height: 1;
+    height: em(38);
     display: inline-block;
   }
 }
